--- a/index.html
+++ b/index.html
@@ -1,28 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | QR code component</title>
 
-  Improve your front-end skills by building projects
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      body {
+        background-color: hsl(212, 45%, 89%);
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+      }
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      .card {
+        font-family: "Outfit", sans-serif;
+        border: solid 1px white;
+        border-radius: 20px;
+        padding: 20px;
+        width: 320px;
+        box-sizing: border-box;
+        text-align: center;
+        background-color: hsl(0, 0%, 100%);
+      }
+
+      img {
+        border-radius: 20px;
+        max-width: 100%;
+      }
+
+      p {
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: hsl(218, 44%, 22%);
+      }
+
+      span {
+        color: hsl(220, 15%, 55%);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="card">
+        <img
+          class="qr-code-img"
+          src="./images//image-qr-code.png"
+          alt="QR_Code_FrontendMentor"
+        />
+        <p>Improve your front-end skills by building projects</p>
+        <span
+          >Scan the QR Code to visit Frontend Mentor and take your coding skills
+          to the next level</span
+        >
+      </div>
+    </main>
+  </body>
 </html>
